--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "auth0-js": "^9.2.0",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "koa": "^2.4.1",
+    "koa-angular-proxy": "^1.0.2",
+    "koa-logger": "^3.1.0",
+    "koa-routing": "^1.3.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
