--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "auth0-js": "^9.2.0",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "koa": "^2.4.1",
     "koa-angular-proxy": "^1.0.2",
+    "koa-bodyparser": "^4.2.0",
     "koa-logger": "^3.1.0",
     "koa-routing": "^1.3.1",
     "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
     "rxjs": "^5.5.6",
+    "sequelize": "^4.33.4",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
