--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/auth0-js": "^8.11.2",
-    "auth0-js": "^9.2.0",
+    "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.1.1",
     "koa": "^2.4.1",
     "koa-angular-proxy": "^1.0.2",
+    "koa-bearer-token": "^0.1.2",
     "koa-bodyparser": "^4.2.0",
+    "koa-combine-routers": "^2.0.1",
     "koa-logger": "^3.1.0",
-    "koa-routing": "^1.3.1",
+    "koa-router": "^7.4.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "rxjs": "^5.5.6",
