--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@koa/cors": "2",
     "@types/auth0-js": "^8.11.2",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
